--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
         flex-direction: column;
         justify-content: center;
         position: absolute;
+        background-color: #ABEAF7;
         top: 0;
         right: 0;
         left: 0;
@@ -65,7 +66,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
       <div class="full-page-loader">
-        <img width="200" src="/logo512.png" alt="AIP.Trade logo" />
+        <span>loading...</span>
       </div>
     </div>
     <!--
