improve speed index

--- a/public/index.html
+++ b/public/index.html
@@ -32,33 +32,11 @@
         flex-direction: column;
         justify-content: center;
         position: absolute;
-        background-color: #ABEAF7;
+        background-color: #abeaf7;
         top: 0;
         right: 0;
         left: 0;
         bottom: 0;
-      }
-
-      .full-page-loader > img {
-        animation: 1.8s infinite heartbeat;
-      }
-
-      @keyframes heartbeat {
-        0% {
-          transform: scale(1);
-        }
-        25% {
-          transform: scale(1.05);
-        }
-        50% {
-          transform: scale(1);
-        }
-        75% {
-          transform: scale(1.05);
-        }
-        100% {
-          transform: scale(1);
-        }
       }
     </style>
   </head>
