--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
         flex-direction: column;
         justify-content: center;
         position: absolute;
-        background-color: #abeaf7;
+        /* background-color: #abeaf7; */
         top: 0;
         right: 0;
         left: 0;
