--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
+      name="keywords"
+      content="Weather, Forecast, Sasa, Free, Alerts, warnings"
+    />
+    <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Latest weather conditions and forecasts for anywhere in the world. Includes up to 14-days of hourly forecast information, warnings, and maps"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
