remove default react logo

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="Weather, Forecast, Sasa, Free, Alerts, warnings" />
   <meta name="description"
     content="Latest weather conditions and forecasts for anywhere in the world. Includes up to 14-days of hourly forecast information, warnings, and maps" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.svg" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
